; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_28360.c_ip_checksum.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_28360.c_ip_checksum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local zeroext i16 @ip_checksum(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  br label %7

7:                                                ; preds = %21, %2
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp ult i32 %8, %9
  br i1 %10, label %11, label %24

11:                                               ; preds = %7
  %12 = load i8*, i8** %3, align 8
  %13 = load i32, i32* %5, align 4
  %14 = zext i32 %13 to i64
  %15 = getelementptr inbounds i8, i8* %12, i64 %14
  %16 = bitcast i8* %15 to i16*
  %17 = load i16, i16* %16, align 2
  %18 = zext i16 %17 to i64
  %19 = load i64, i64* %6, align 8
  %20 = add i64 %19, %18
  store i64 %20, i64* %6, align 8
  br label %21

21:                                               ; preds = %11
  %22 = load i32, i32* %5, align 4
  %23 = add i32 %22, 2
  store i32 %23, i32* %5, align 4
  br label %7

24:                                               ; preds = %7
  %25 = load i64, i64* %6, align 8
  %26 = lshr i64 %25, 16
  %27 = load i64, i64* %6, align 8
  %28 = and i64 %27, 65535
  %29 = add i64 %26, %28
  store i64 %29, i64* %6, align 8
  %30 = load i64, i64* %6, align 8
  %31 = lshr i64 %30, 16
  %32 = load i64, i64* %6, align 8
  %33 = add i64 %32, %31
  store i64 %33, i64* %6, align 8
  %34 = load i64, i64* %6, align 8
  %35 = xor i64 %34, -1
  store i64 %35, i64* %6, align 8
  %36 = load i64, i64* %6, align 8
  %37 = trunc i64 %36 to i16
  ret i16 %37
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
